re1: start moving game specific stuff in separate directory

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = g_re2 g_re3
+SUBDIRS = g_re1 g_re2 g_re3
 
 bin_PROGRAMS = reevengi
 
@@ -12,7 +12,6 @@ reevengi_SOURCES = background_bss.c background_tim.c clock.c \
 	depack_adt.c depack_mdec.c depack_pak.c depack_vlc.c depack_sld.c \
 	dirty_rects.c dither.c draw_sbuffer.c draw_simple.c dyngl.c \
 	filesystem.c idctfst.c log.c main.c matrix.c \
-	model_emd.c \
 	parameters.c physfsrwops.c menu.c \
 	re1_pc_game.c re1_ps1.c \
 	re2_pc_demo.c re2_pc_game.c re2_ps1.c \
@@ -34,7 +33,6 @@ reevengi_headers = background_bss.h background_tim.h clock.h \
 	depack_adt.h depack_mdec.h depack_pak.h depack_vlc.h depack_sld.h \
 	dirty_rects.h dither.h draw.h draw_sbuffer.h draw_simple.h dyngl.h \
 	filesystem.h idctfst.h log.h matrix.h \
-	model_emd.h \
 	parameters.h physfsrwops.h menu.h \
 	re1_pc_game.h re1_ps1.h \
 	re2_pc_demo.h re2_pc_game.h re2_ps1.h \
@@ -51,7 +49,7 @@ reevengi_headers = background_bss.h background_tim.h clock.h \
 	state.h video.h \
 	view_background.h view_movie.h
 
-reevengi_LDADD = g_re2/libg_re2.a g_re3/libg_re3.a
+reevengi_LDADD = g_re1/libg_re1.a g_re2/libg_re2.a g_re3/libg_re3.a
 
 reevengi_generated = dyngl_gl.c dyngl_gl.h dyngl_glext.c dyngl_glext.h
 
