re1: move game state to g_re1

--- a/src/g_re1/Makefile.am
+++ b/src/g_re1/Makefile.am
@@ -1,10 +1,10 @@
 noinst_LIBRARIES = libg_re1.a
 
-libg_re1_a_SOURCES = emd.c
+libg_re1_a_SOURCES = emd.c re1_pc_game.c re1_ps1.c
 
 AM_CFLAGS = $(SDL_CFLAGS)
 AM_CXXFLAGS = $(SDL_CFLAGS)
 
 INCLUDES = -I$(top_srcdir)/src
 
-EXTRA_DIST = emd.h
+EXTRA_DIST = emd.h re1_pc_game.ch re1_ps1.h
