--- a/src/g_re2/Makefile.am
+++ b/src/g_re2/Makefile.am
@@ -1,10 +1,10 @@
 noinst_LIBRARIES = libg_re2.a
 
-libg_re2_a_SOURCES = emd.c
+libg_re2_a_SOURCES = emd.c re2_pc_demo.c re2_pc_game.c re2_ps1.c
 
 AM_CFLAGS = $(SDL_CFLAGS)
 AM_CXXFLAGS = $(SDL_CFLAGS)
 
 INCLUDES = -I$(top_srcdir)/src
 
-EXTRA_DIST = emd.h
+EXTRA_DIST = emd.h re2_pc_demo.h re2_pc_game.h re2_ps1.h
