re3: move game state to g_re3

--- a/src/g_re3/Makefile.am
+++ b/src/g_re3/Makefile.am
@@ -1,10 +1,10 @@
 noinst_LIBRARIES = libg_re3.a
 
-libg_re3_a_SOURCES = emd.c
+libg_re3_a_SOURCES = emd.c re3_pc.c re3_ps1_game.c
 
 AM_CFLAGS = $(SDL_CFLAGS)
 AM_CXXFLAGS = $(SDL_CFLAGS)
 
 INCLUDES = -I$(top_srcdir)/src
 
-EXTRA_DIST = emd.h
+EXTRA_DIST = emd.h re3_pc.h re3_ps1_game.h
