re3: move room specific stuff

--- a/src/g_re3/Makefile.am
+++ b/src/g_re3/Makefile.am
@@ -1,10 +1,16 @@
 noinst_LIBRARIES = libg_re3.a
 
-libg_re3_a_SOURCES = emd.c re3_pc.c re3_ps1_game.c
+libg_re3_a_SOURCES = emd.c \
+	re3_pc.c re3_ps1_game.c \
+	room_rdt3.c \
+	room_rdt3_script.c room_rdt3_script_dump.c
 
 AM_CFLAGS = $(SDL_CFLAGS)
 AM_CXXFLAGS = $(SDL_CFLAGS)
 
 INCLUDES = -I$(top_srcdir)/src
 
-EXTRA_DIST = emd.h re3_pc.h re3_ps1_game.h
+EXTRA_DIST = emd.h \
+	re3_pc.h re3_ps1_game.h \
+	room_rdt3.h \
+	room_rdt3_script.h room_rdt3_script_common.h room_rdt3_script_dump.h
