r_soft: move to separate directory

--- a/configure.ac
+++ b/configure.ac
@@ -172,6 +172,7 @@ src/g_re1/Makefile
 src/g_re2/Makefile
 src/g_re3/Makefile
 src/r_opengl/Makefile
+src/r_soft/Makefile
 vs2005/Makefile
 ])
 AC_OUTPUT
