--- a/src/r_soft/Makefile.am
+++ b/src/r_soft/Makefile.am
@@ -1,10 +1,12 @@
 noinst_LIBRARIES = libr_soft.a
 
-libr_soft_a_SOURCES = dither.c draw_sbuffer.c draw_simple.c matrix.c
+libr_soft_a_SOURCES = dirty_rects.c dither.c draw_sbuffer.c draw_simple.c \
+	matrix.c
 
 AM_CFLAGS = $(SDL_CFLAGS)
 AM_CXXFLAGS = $(SDL_CFLAGS)
 
 INCLUDES = -I$(top_srcdir)/src
 
-EXTRA_DIST = dither.h draw.h draw_sbuffer.h draw_simple.h matrix.h
+EXTRA_DIST = dirty_rects.h dither.h draw.h draw_sbuffer.h draw_simple.h \
+	matrix.h
