--- a/src/g_re2/Makefile.am
+++ b/src/g_re2/Makefile.am
@@ -1,7 +1,7 @@
 noinst_LIBRARIES = libg_re2.a
 
-libg_re2_a_SOURCES = emd.c \
-	re2_pc_demo.c re2_pc_game.c re2_ps1.c \
+libg_re2_a_SOURCES = emd.c game_re2.c \
+	game_re2_pc_demo.c game_re2_pc_game.c game_re2_ps1.c \
 	room_rdt2.c \
 	room_rdt2_script.c room_rdt2_script_dump.c
 
@@ -10,7 +10,6 @@ AM_CXXFLAGS = $(SDL_CFLAGS)
 
 INCLUDES = -I$(top_srcdir)/src
 
-EXTRA_DIST = emd.h \
-	re2_pc_demo.h re2_pc_game.h re2_ps1.h \
+EXTRA_DIST = emd.h game_re2.h \
 	room_rdt2.h \
 	room_rdt2_script.h room_rdt2_script_common.h room_rdt2_script_dump.h
