--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -11,7 +11,7 @@ LIBS = $(SDL_LIBS) $(SDLIMAGE_LIBS) $(PHYSFS_LIBS) $(ZLIB_LIBS) $(AVCODEC_LIBS) 
 reevengi_SOURCES = background_bss.c background_tim.c clock.c \
 	depack_adt.c depack_mdec.c depack_pak.c depack_vlc.c depack_sld.c \
 	filesystem.c idctfst.c log.c main.c \
-	parameters.c physfsrwops.c menu.c \
+	parameters.c physfsrwops.c \
 	render_bitmap.c render_bitmap_opengl.c \
 	render.c render_opengl.c render_text.c \
 	render_mesh.c render_mesh_opengl.c \
@@ -19,22 +19,20 @@ reevengi_SOURCES = background_bss.c background_tim.c clock.c \
 	render_texture.c render_texture_opengl.c \
 	render_texture_list.c \
 	render_mask.c render_mask_opengl.c \
-	room.c \
-	state.c video.c video_opengl.c \
+	video.c video_opengl.c \
 	view_background.c view_movie.c
 
 reevengi_headers = background_bss.h background_tim.h clock.h \
 	depack_adt.h depack_mdec.h depack_pak.h depack_vlc.h depack_sld.h \
 	filesystem.h idctfst.h log.h \
-	parameters.h physfsrwops.h menu.h \
+	parameters.h physfsrwops.h \
 	render.h render_bitmap.h render_text.h \
 	render_mesh.h render_mesh_opengl.h \
 	render_skel.h render_skel_opengl.h render_skel_list.h \
 	render_texture.h render_texture_opengl.h \
 	render_texture_list.h \
 	render_mask.h render_mask_opengl.h \
-	room.h \
-	state.h video.h \
+	video.h \
 	view_background.h view_movie.h
 
 reevengi_LDADD = g_common/libg_common.a g_re1/libg_re1.a g_re2/libg_re2.a \
