Case-independent fs

--- a/src/g_common/Makefile.am
+++ b/src/g_common/Makefile.am
@@ -1,10 +1,11 @@
 noinst_LIBRARIES = libg_common.a
 
-libg_common_a_SOURCES = game.c menu.c player.c room.c room_map.c
+libg_common_a_SOURCES = game.c fs_ignorecase.c menu.c player.c room.c \
+	room_map.c
 
 AM_CFLAGS = $(SDL_CFLAGS)
 AM_CXXFLAGS = $(SDL_CFLAGS)
 
 INCLUDES = -I$(top_srcdir)/src
 
-EXTRA_DIST = game.h menu.h player.h room.h room_map.h
+EXTRA_DIST = game.h fs_ignorecase.h menu.h player.h room.h room_map.h
