re3: use most of re2 rdt stuff

--- a/src/g_re3/Makefile.am
+++ b/src/g_re3/Makefile.am
@@ -1,8 +1,7 @@
 noinst_LIBRARIES = libg_re3.a
 
 libg_re3_a_SOURCES = emd.c game_re3.c game_re3_pc.c game_re3_ps1_game.c \
-	room_rdt3.c \
-	room_rdt3_script.c room_rdt3_script_dump.c
+	rdt_scd.c rdt_scd_dump.c
 
 AM_CFLAGS = $(SDL_CFLAGS)
 AM_CXXFLAGS = $(SDL_CFLAGS)
@@ -10,5 +9,4 @@ AM_CXXFLAGS = $(SDL_CFLAGS)
 INCLUDES = -I$(top_srcdir)/src
 
 EXTRA_DIST = emd.h game_re3.h \
-	room_rdt3.h \
-	room_rdt3_script.h room_rdt3_script_common.h room_rdt3_script_dump.h
+	rdt_scd.h rdt_scd_common.h rdt_scd_dump.h
