Move render_text

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -13,7 +13,7 @@ reevengi_SOURCES = background_bss.c background_tim.c clock.c \
 	filesystem.c idctfst.c log.c main.c \
 	parameters.c physfsrwops.c \
 	render_bitmap.c render_bitmap_opengl.c \
-	render.c render_opengl.c render_text.c \
+	render.c render_opengl.c \
 	render_mesh.c render_mesh_opengl.c \
 	render_skel.c render_skel_opengl.c \
 	render_texture.c render_texture_opengl.c \
@@ -25,7 +25,7 @@ reevengi_headers = background_bss.h background_tim.h clock.h \
 	depack_mdec.h depack_vlc.h \
 	filesystem.h idctfst.h log.h \
 	parameters.h physfsrwops.h \
-	render.h render_bitmap.h render_text.h \
+	render.h render_bitmap.h \
 	render_mesh.h render_mesh_opengl.h \
 	render_skel.h render_skel_opengl.h \
 	render_texture.h render_texture_opengl.h \
