opengl: move source

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -12,12 +12,12 @@ reevengi_SOURCES = background_bss.c background_tim.c clock.c \
 	depack_mdec.c depack_vlc.c \
 	filesystem.c idctfst.c log.c main.c \
 	parameters.c physfsrwops.c \
-	render_bitmap.c render_bitmap_opengl.c \
-	render.c render_opengl.c \
-	render_mesh.c render_mesh_opengl.c \
-	render_skel.c render_skel_opengl.c \
-	render_texture.c render_texture_opengl.c \
-	render_mask.c render_mask_opengl.c \
+	render_bitmap.c \
+	render.c \
+	render_mesh.c \
+	render_skel.c \
+	render_texture.c \
+	render_mask.c \
 	video.c video_opengl.c \
 	view_background.c view_movie.c
 
@@ -26,10 +26,10 @@ reevengi_headers = background_bss.h background_tim.h clock.h \
 	filesystem.h idctfst.h log.h \
 	parameters.h physfsrwops.h \
 	render.h render_bitmap.h \
-	render_mesh.h render_mesh_opengl.h \
-	render_skel.h render_skel_opengl.h \
-	render_texture.h render_texture_opengl.h \
-	render_mask.h render_mask_opengl.h \
+	render_mesh.h  \
+	render_skel.h \
+	render_texture.h \
+	render_mask.h \
 	video.h \
 	view_background.h view_movie.h
 
