--- a/src/r_opengl/Makefile.am
+++ b/src/r_opengl/Makefile.am
@@ -1,6 +1,8 @@
 noinst_LIBRARIES = libr_opengl.a
 
-libr_opengl_a_SOURCES = dyngl.c
+libr_opengl_a_SOURCES = dyngl.c render_bitmap_opengl.c render_mask_opengl.c \
+	render_mesh_opengl.c render_opengl.c render_skel_opengl.c \
+	render_texture_opengl.c
 
 AM_CFLAGS = $(SDL_CFLAGS)
 AM_CXXFLAGS = $(SDL_CFLAGS)
@@ -9,4 +11,5 @@ INCLUDES = -I$(top_srcdir)/src
 
 reevengi_generated = dyngl_gl.c dyngl_gl.h dyngl_glext.c dyngl_glext.h
 
-EXTRA_DIST = dyngl.h $(reevengi_generated)
+EXTRA_DIST = $(reevengi_generated) dyngl.h render_mask_opengl.h \
+	render_mesh_opengl.h render_skel_opengl.h render_texture_opengl.h
