--- a/src/g_common/Makefile.am
+++ b/src/g_common/Makefile.am
@@ -1,12 +1,12 @@
 noinst_LIBRARIES = libg_common.a
 
 libg_common_a_SOURCES = game.c fs_ignorecase.c menu.c player.c room.c \
-	room_script.c room_camswitch.c room_map.c room_door.c room_collision.c \
+	room_script.c room_camswitch.c room_map.c room_door.c \
 	room_item.c
 
 AM_CFLAGS = $(SDL_CFLAGS)
 AM_CXXFLAGS = $(SDL_CFLAGS)
 
 EXTRA_DIST = game.h fs_ignorecase.h menu.h player.h room.h room_script.h \
-	room_camswitch.h room_map.h room_door.h room_collision.h \
+	room_camswitch.h room_map.h room_door.h \
 	room_item.h
