--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -33,8 +33,9 @@ reevengi_headers = background_bss.h background_tim.h clock.h \
 	video.h \
 	view_background.h view_movie.h
 
-reevengi_LDADD = g_common/libg_common.a g_re1/libg_re1.a g_re2/libg_re2.a \
-	g_re3/libg_re3.a r_common/libr_common.a r_opengl/libr_opengl.a \
-	r_soft/libr_soft.a
+reevengi_LDADD = g_re1/libg_re1.a g_re2/libg_re2.a g_re3/libg_re3.a \
+	g_common/libg_common.a \
+	r_opengl/libr_opengl.a r_soft/libr_soft.a \
+	r_common/libr_common.a 
 
 EXTRA_DIST = $(reevengi_headers)
