--- a/src/g_re3/Makefile.am
+++ b/src/g_re3/Makefile.am
@@ -2,7 +2,7 @@ noinst_LIBRARIES = libg_re3.a
 
 libg_re3_a_SOURCES = emd.c sld.c game_re3.c game_re3_pc.c \
 	game_re3_ps1_game.c rdt_scd.c rdt_scd_dump.c rdt_sca.c \
-	rdt.c
+	rdt.c ard.c
 
 AM_CFLAGS = $(SDL_CFLAGS) $(SDL_IMAGE_CFLAGS)
 AM_CXXFLAGS = $(SDL_CFLAGS) $(SDL_IMAGE_CFLAGS)
@@ -11,4 +11,4 @@ INCLUDES = -I$(top_srcdir)/src
 
 EXTRA_DIST = emd.h sld.h game_re3.h \
 	rdt_scd.h rdt_scd_common.h rdt_scd_dump.h rdt_sca.h \
-	rdt.h
+	rdt.h ard.h
