--- a/src/g_re2/Makefile.am
+++ b/src/g_re2/Makefile.am
@@ -3,7 +3,7 @@ noinst_LIBRARIES = libg_re2.a
 libg_re2_a_SOURCES = emd.c adt.c game_re2.c \
 	game_re2_pc_demo.c game_re2_pc_game.c game_re2_ps1.c \
 	rdt.c rdt_rid.c rdt_rvd.c rdt_pri.c rdt_msg.c \
-	rdt_scd.c rdt_scd_dump.c rdt_sca.c
+	rdt_scd.c rdt_scd_dump.c rdt_sca.c ems.c
 
 AM_CFLAGS = $(SDL_CFLAGS)
 AM_CXXFLAGS = $(SDL_CFLAGS)
@@ -11,4 +11,4 @@ AM_CXXFLAGS = $(SDL_CFLAGS)
 EXTRA_DIST = emd.h adt.h game_re2.h \
 	rdt.h rdt_rid.h rdt_rvd.h rdt_pri.h rdt_msg.h \
 	rdt_scd.h rdt_scd_common.h rdt_scd_dump.h rdt_sca.h \
-	rdt_esp.h
+	rdt_esp.h ems.h
