--- a/src/r_opengl/Makefile.am
+++ b/src/r_opengl/Makefile.am
@@ -7,7 +7,7 @@ libr_opengl_a_SOURCES = dyngl.c render_bitmap_opengl.c render_mask_opengl.c \
 AM_CFLAGS = $(SDL_CFLAGS)
 AM_CXXFLAGS = $(SDL_CFLAGS)
 
-INCLUDES = -I$(top_srcdir)/src
+#INCLUDES = -I$(top_srcdir)/src
 
 reevengi_generated = dyngl_gl.c dyngl_gl.h dyngl_glext.c dyngl_glext.h
 
