--- a/src/r_opengl/Makefile.am
+++ b/src/r_opengl/Makefile.am
@@ -1,6 +1,6 @@
 noinst_LIBRARIES = libr_opengl.a
 
-libr_opengl_a_SOURCES = dyngl.c render_bitmap_opengl.c render_mask_opengl.c \
+libr_opengl_a_SOURCES = dyngl.c render_bitmap_opengl.c render_mask.c \
 	render_mesh_opengl.c render_opengl.c render_skel_opengl.c \
 	render_texture_opengl.c
 
@@ -11,5 +11,5 @@ AM_CXXFLAGS = $(SDL_CFLAGS)
 
 reevengi_generated = dyngl_gl.c dyngl_gl.h dyngl_glext.c dyngl_glext.h
 
-EXTRA_DIST = $(reevengi_generated) dyngl.h render_mask_opengl.h \
+EXTRA_DIST = $(reevengi_generated) dyngl.h render_mask.h \
 	render_mesh_opengl.h render_skel_opengl.h render_texture_opengl.h
