render_bitmap: split in common/software/opengl

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -12,7 +12,6 @@ reevengi_SOURCES = background_bss.c background_tim.c clock.c \
 	depack_mdec.c depack_vlc.c \
 	filesystem.c idctfst.c log.c main.c \
 	parameters.c physfsrwops.c \
-	render_bitmap.c \
 	render.c \
 	render_mesh.c \
 	render_skel.c \
@@ -24,7 +23,7 @@ reevengi_headers = background_bss.h background_tim.h clock.h \
 	depack_mdec.h depack_vlc.h \
 	filesystem.h idctfst.h log.h \
 	parameters.h physfsrwops.h \
-	render.h render_bitmap.h \
+	render.h \
 	render_mesh.h  \
 	render_skel.h \
 	render_texture.h \
