--- a/src/r_soft/Makefile.am
+++ b/src/r_soft/Makefile.am
@@ -1,7 +1,7 @@
 noinst_LIBRARIES = libr_soft.a
 
 libr_soft_a_SOURCES = dirty_rects.c dither.c draw_sbuffer.c draw_simple.c \
-	matrix.c render_mask.c
+	matrix.c render_mask.c render_bitmap.c
 
 AM_CFLAGS = $(SDL_CFLAGS)
 AM_CXXFLAGS = $(SDL_CFLAGS)
@@ -9,4 +9,4 @@ AM_CXXFLAGS = $(SDL_CFLAGS)
 #INCLUDES = -I$(top_srcdir)/src
 
 EXTRA_DIST = dirty_rects.h dither.h draw.h draw_sbuffer.h draw_simple.h \
-	matrix.h render_mask.h
+	matrix.h render_mask.h render_bitmap.h
