render_skel: move to r_common

--- a/src/r_common/Makefile.am
+++ b/src/r_common/Makefile.am
@@ -1,7 +1,7 @@
 noinst_LIBRARIES = libr_common.a
 
 libr_common_a_SOURCES = render_skel_list.c render_texture_list.c \
-	render_text.c render_mask.c render_bitmap.c
+	render_text.c render_mask.c render_bitmap.c render_skel.c
 
 AM_CFLAGS = $(SDL_CFLAGS)
 AM_CXXFLAGS = $(SDL_CFLAGS)
@@ -9,4 +9,4 @@ AM_CXXFLAGS = $(SDL_CFLAGS)
 #INCLUDES = -I$(top_srcdir)/src
 
 EXTRA_DIST = render_skel_list.h render_texture_list.h \
-	render_text.h render_mask.h render_bitmap.h
+	render_text.h render_mask.h render_bitmap.h render_skel.h
