render: split between common/software/opengl

--- a/src/r_common/Makefile.am
+++ b/src/r_common/Makefile.am
@@ -2,7 +2,7 @@ noinst_LIBRARIES = libr_common.a
 
 libr_common_a_SOURCES = render_skel_list.c render_texture_list.c \
 	render_text.c render_mask.c render_bitmap.c render_skel.c \
-	render_mesh.c r_misc.c render_texture.c
+	render_mesh.c r_misc.c render_texture.c render.c
 
 AM_CFLAGS = $(SDL_CFLAGS)
 AM_CXXFLAGS = $(SDL_CFLAGS)
@@ -11,4 +11,4 @@ AM_CXXFLAGS = $(SDL_CFLAGS)
 
 EXTRA_DIST = render_skel_list.h render_texture_list.h \
 	render_text.h render_mask.h render_bitmap.h render_skel.h \
-	render_mesh.h r_misc.h render_texture.h
+	render_mesh.h r_misc.h render_texture.h render.h
