--- a/src/r_opengl/Makefile.am
+++ b/src/r_opengl/Makefile.am
@@ -1,7 +1,7 @@
 noinst_LIBRARIES = libr_opengl.a
 
 libr_opengl_a_SOURCES = dyngl.c render_bitmap.c render_mask.c \
-	render_mesh.c render_opengl.c render_skel.c \
+	render_mesh.c render.c render_skel.c \
 	render_texture.c
 
 AM_CFLAGS = $(SDL_CFLAGS)
@@ -13,4 +13,4 @@ reevengi_generated = dyngl_gl.c dyngl_gl.h dyngl_glext.c dyngl_glext.h
 
 EXTRA_DIST = $(reevengi_generated) dyngl.h render_mask.h \
 	render_mesh.h render_skel.h render_texture.h \
-	render_bitmap.h
+	render_bitmap.h render.h
