--- a/src/g_re2/Makefile.am
+++ b/src/g_re2/Makefile.am
@@ -8,7 +8,7 @@ libg_re2_a_SOURCES = emd.c adt.c game_re2.c \
 AM_CFLAGS = $(SDL_CFLAGS)
 AM_CXXFLAGS = $(SDL_CFLAGS)
 
-EXTRA_DIST = emd.h adt.h game_re2.h \
+EXTRA_DIST = emd.h adt.h game_re2.h game_re2_pc_game.h \
 	rdt.h rdt_rid.h rdt_rvd.h rdt_pri.h rdt_msg.h \
 	rdt_scd.h rdt_scd_common.h rdt_scd_dump.h rdt_sca.h \
 	rdt_esp.h ems.h
