Update vs2005 project files

--- a/vs2005/Makefile.am
+++ b/vs2005/Makefile.am
@@ -1,3 +1,4 @@
+SUBDIRS = libg_common libg_re1 libg_re2 libg_re3 \
+	libr_common libr_soft libr_opengl
+
 EXTRA_DIST = reevengi.sln reevengi.vcproj config.h
-
-
