--- a/src/g_re3/Makefile.am
+++ b/src/g_re3/Makefile.am
@@ -10,5 +10,6 @@ AM_CXXFLAGS = $(SDL_CFLAGS) $(SDL_IMAGE_CFLAGS)
 EXTRA_DIST = emd.h sld.h game_re3.h \
 	rdt_scd.h rdt_scd_common.h rdt_scd_dump.h rdt_sca.h \
 	rdt.h ard.h \
-	cd_raw.c
+	cd_raw.c \
+	libg_re3.vcproj
 
