--- a/src/r_soft/Makefile.am
+++ b/src/r_soft/Makefile.am
@@ -14,4 +14,5 @@ EXTRA_DIST = dirty_rects.h dither.h draw.h draw_sbuffer.h draw_simple.h \
 	matrix.h render_mask.h render_bitmap.h render_mesh.h render_texture.h \
 	render.h draw_sbuffer8.h draw_sbuffer16.h draw_sbuffer24.h \
 	draw_sbuffer32.h \
-	draw_simple.c
+	draw_simple.c \
+	libr_soft.vcproj
