m68k: move in a different file for inclusion

--- a/src/r_soft/Makefile.am
+++ b/src/r_soft/Makefile.am
@@ -13,4 +13,5 @@ EXTRA_DIST = dirty_rects.h dither.h draw.h draw_sbuffer.h \
 	render.h draw_sbuffer8.h draw_sbuffer16.h draw_sbuffer24.h \
 	draw_sbuffer32.h \
 	span_fill.inc.c span_gouraud.inc.c span_textured.inc.c \
+	span_textured8.m68k.inc.c span_textured16.m68k.inc.c \
 	libr_soft.vcproj
