--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,11 +2,13 @@ SUBDIRS = g_common g_re1 g_re2 g_re3 r_common r_opengl r_soft
 
 bin_PROGRAMS = reevengi
 
-AM_CFLAGS = $(SDL_CFLAGS) $(AVCODEC_CFLAGS) $(AVFORMAT_CFLAGS) $(PHYSFS_CFLAGS)
-AM_CXXFLAGS = $(SDL_CFLAGS) $(AVCODEC_CFLAGS) $(AVFORMAT_CFLAGS) $(PHYSFS_CFLAGS)
+AM_CFLAGS = $(SDL_CFLAGS) $(AVCODEC_CFLAGS) $(AVFORMAT_CFLAGS) \
+	$(SWSCALE_CFLAGS) $(PHYSFS_CFLAGS)
+AM_CXXFLAGS = $(SDL_CFLAGS) $(AVCODEC_CFLAGS) $(AVFORMAT_CFLAGS) \
+	$(SWSCALE_CFLAGS) $(PHYSFS_CFLAGS)
 
-LIBS = $(SDL_LIBS) $(SDL_IMAGE_LIBS) $(PHYSFS_LIBS) $(ZLIB_LIBS) $(AVCODEC_LIBS) \
-	$(AVFORMAT_LIBS)
+LIBS = $(SDL_LIBS) $(SDL_IMAGE_LIBS) $(PHYSFS_LIBS) $(ZLIB_LIBS) \
+	$(AVCODEC_LIBS) $(AVFORMAT_LIBS) $(SWSCALE_LIBS)
 
 reevengi_SOURCES = background_bss.c background_tim.c clock.c \
 	depack_mdec.c depack_vlc.c \
