--- a/src/g_re2/Makefile.am
+++ b/src/g_re2/Makefile.am
@@ -12,15 +12,31 @@ XML2SCD = $(top_builddir)/extra/xml2scd
 
 SCD_XML = scd2.xml
 
+rdt_scd_dump.c: rdt_scd_defs.gen.h rdt_scd_types.gen.h \
+	rdt_scd_dumps.gen.c
+
+rdt_scd.c:	rdt_scd_defs.gen.h rdt_scd_types.gen.h \
+	rdt_scd_lengths.gen.c
+
 rdt_scd_defs.gen.h:	$(SCD_XML) $(XML2SCD)
 	$(XML2SCD) $< --defines > $@
+
+rdt_scd_types.gen.h:	$(SCD_XML) $(XML2SCD)
+	$(XML2SCD) $< --types > $@
+
+rdt_scd_dumps.gen.c:	$(SCD_XML) $(XML2SCD)
+	$(XML2SCD) $< --dumps > $@
+
+rdt_scd_lengths.gen.c:	$(SCD_XML) $(XML2SCD)
+	$(XML2SCD) $< --lengths > $@
 
 header_files = emd.h adt.h game_re2.h game_re2_pc_game.h \
 	rdt.h rdt_rid.h rdt_rvd.h rdt_pri.h rdt_msg.h \
 	rdt_scd.h rdt_scd_common.h rdt_scd_dump.h rdt_sca.h \
 	rdt_esp.h rdt_lit.h ems.h
 
-generated_files = rdt_scd_defs.gen.h
+generated_files = rdt_scd_defs.gen.h rdt_scd_types.gen.h \
+	rdt_scd_dumps.gen.c rdt_scd_lengths.gen.c
 
 EXTRA_DIST = $(header_files) $(generated_files) \
 	libg_re2.vcproj $(SCD_XML)
