--- a/src/g_re1/Makefile.am
+++ b/src/g_re1/Makefile.am
@@ -30,7 +30,7 @@ rdt_scd_lengths.gen.c:	$(SCD_XML) $(XML2SCD)
 	$(XML2SCD) $< --lengths > $@
 
 header_files = emd.h pak.h game_re1.h rdt.h rdt_rvd.h rdt_rid.h \
-	rdt_pri.h rdt_scd.h rdt_scd_common.h rdt_scd_dump.h \
+	rdt_pri.h rdt_scd.h rdt_scd_dump.h \
 	rdt_sca.h rdt_msg.h rdt_evt.h
 
 generated_files = rdt_scd_defs.gen.h rdt_scd_types.gen.h rdt_scd_dumps.gen.c \
