--- a/src/g_re3/Makefile.am
+++ b/src/g_re3/Makefile.am
@@ -12,7 +12,7 @@ XML2SCD = $(top_builddir)/extra/xml2scd
 SCD_XML = scd3.xml
 
 rdt_scd_dump.c: rdt_scd_defs.gen.h rdt_scd_types.gen.h \
-	rdt_scd_dumps.gen.c
+	rdt_scd_dumps.gen.c rdt_scd_enums.gen.c
 
 rdt_scd.c:	rdt_scd_defs.gen.h rdt_scd_types.gen.h \
 	rdt_scd_lengths.gen.c
@@ -29,12 +29,16 @@ rdt_scd_dumps.gen.c:	$(SCD_XML) $(XML2SCD)
 rdt_scd_lengths.gen.c:	$(SCD_XML) $(XML2SCD)
 	$(XML2SCD) $< --lengths > $@
 
+rdt_scd_enums.gen.c:	$(SCD_XML) $(XML2SCD)
+	$(XML2SCD) $< --enums > $@
+
 header_files = emd.h sld.h game_re3.h \
 	rdt_scd.h rdt_scd_dump.h rdt_sca.h \
 	rdt.h ard.h cd_raw.c
 
 generated_files = rdt_scd_defs.gen.h rdt_scd_types.gen.h \
-	rdt_scd_dumps.gen.c rdt_scd_lengths.gen.c
+	rdt_scd_dumps.gen.c rdt_scd_lengths.gen.c \
+	rdt_scd_enums.gen.c
 
 EXTRA_DIST = $(header_files) $(generated_files) \
 	libg_re3.vcproj $(SCD_XML)
