vs2005: add xmltools project

--- a/extra/Makefile.am
+++ b/extra/Makefile.am
@@ -7,3 +7,5 @@ xml2scd.o:	$(xml2scd_SOURCES)
 
 xml2scd:	xml2scd.o
 	$(CCLD_FOR_BUILD) $(LDFLAGS_FOR_BUILD) $(LIBXML_LIBS) -o $@ $<
+
+EXTRA_DIST = xmltools.vcproj
